# apply-lens

./: .gitignore  ChangeLog.md  README.md  apply-lens.cabal  default.nix  nixpkgs.json  package.yaml
app/: Main.hs
src/lib/: Prelude.hs
src/lib/Parliament/: CacheDataTypes.hs  Common.hs  DataTypes.hs  FundDistribution.hs  StructureBuildup.hs  Utils.hs
src/resources/: mvp.json  sample.json
test/: Spec.hs
test/Parliament/: Arbitraries.hs  FundDistributionSpec.hs  StructureBuildupSpec.hs  TestUtils.hs  UtilsSpec.hs
test/resources/: parliament1.json  parliament2.json  parliament3.json  parliament4.json  parliament5.json  parliament6.json  parliament7.json  parliament8.json
